# listacompras

./: README.md  inicio.py  pyproject.toml  requerements.txt
pages/: comprar.py  editar_lista.py
