[tool.poetry]
package-mode = false
name = "listacompras"
version = "0.1.0"
description = ""
authors = ["willianhwu <willianhw@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "^1.45.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

