[project]
package-mode = false
name = "listacompras"
version = "0.1.0"
description = ""
authors = [
    {name = "willianhwu", email = "willianhw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "streamlit>=1.45.0,<2.0.0",
    "pandas>=2.2.3,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
package-mode = false

